--- a/ProjectManager/src/main/webapp/index.html
+++ b/ProjectManager/src/main/webapp/index.html
@@ -602,7 +602,7 @@
 				</div>
 				<!--显示主页-->
 				<div class="row J_mainContent" id="content-main">
-					<iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="" frameborder="0" data-id="basic_gallery.html" seamless></iframe>
+					<iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="index1.html" frameborder="0" data-id="basic_gallery.html" seamless></iframe>
 				</div>
 			</div>
 			<!--右侧部分结束-->
